# rust-gpu.github.io

./: .gitignore  .gitmodules  README.md  atom.xml  config.toml  custom.css  docusaurus.config.ts  flake.nix  index.html  package.json  robots.txt  search_index.en.js  sitemap.xml  tailwind.config.js
.docusaurus/: client-manifest.json  client-modules.js  docusaurus.config.mjs  globalData.json  registry.js  routes.js  routesChunkNames.json  site-metadata.json
.docusaurus/docusaurus-plugin-content-blog/default/: blog-post-list-prop-default.json  site-blog-2019-05-28-first-blog-post-md-e27.json  site-blog-2019-05-29-long-blog-post-md-736.json  site-blog-2021-08-01-mdx-blog-post-mdx-593.json  site-blog-2021-08-26-welcome-index-md-d9f.json  site-blog-2024-08-12-transition-announcement-md-733.json
.docusaurus/docusaurus-plugin-content-blog/default/p/: blog-archive-f05.json  blog-authors-790.json  blog-authors-leg-neato-2c7.json  blog-tags-announcements-53f.json  blog-tags-demos-7a8.json  blog-tags-df9.json  blog-tags-releases-519.json
.docusaurus/docusaurus-plugin-content-docs/default/: site-docs-changelog-md-9be.json  site-docs-empty-md-b1e.json  site-docs-intro-md-0e3.json  site-docs-tutorial-basics-congratulations-md-822.json  site-docs-tutorial-basics-create-a-blog-post-md-533.json  site-docs-tutorial-basics-create-a-document-md-1e4.json  site-docs-tutorial-basics-create-a-page-md-5c8.json  site-docs-tutorial-basics-deploy-your-site-md-f55.json  site-docs-tutorial-basics-markdown-features-mdx-18c.json  site-docs-tutorial-extras-manage-docs-versions-md-dff.json  site-docs-tutorial-extras-translate-your-site-md-e44.json
.docusaurus/docusaurus-plugin-content-docs/default/p/: docs-175.json  docs-category-tutorial-basics-ea4.json  docs-category-tutorial-extras-128.json
.docusaurus/docusaurus-plugin-content-pages/default/: site-src-pages-changelog-md-758.json  site-src-pages-ecosystem-md-625.json
.docusaurus/docusaurus-plugin-debug/default/p/: docusaurus-debug-content-0d5.json
.github/workflows/: main.yml  rust.yaml
blog/: 2024-08-12-transition-announcement.md  2024-11-06-new-maintainers.md  2024-12-29-rust-gpu-0.10.md  2025-01-27-rust-cuda-reboot.md  2025-03-18-rust-cuda-update.mdx  2025-04-10-shadertoys.md  2025-05-27-rust-cuda-update.mdx  2025-06-24-vulkan-shader-port.mdx  2025-07-25-rust-on-every-gpu.mdx  2025-08-11-rust-cuda-update.mdx  2026-02-23-safe-buffer-writing.mdx  atom.xml  authors.yml  index.html  tags.yml
blog/2024-11-21-optimizing-matrix-mul/: index.md
blog/2024-11-21-optimizing-matrix-mul/code/: Cargo.toml  README.md
blog/2024-11-21-optimizing-matrix-mul/code/benches/: gpu_bench.rs  isomorphic_bench.rs
blog/2024-11-21-optimizing-matrix-mul/code/crates/cpu/matmul/: Cargo.toml
blog/2024-11-21-optimizing-matrix-mul/code/crates/cpu/matmul/src/: lib.rs  variants.rs
blog/2024-11-21-optimizing-matrix-mul/code/crates/cpu/matmul/src/backends/: cpu.rs  wgpu.rs
blog/2024-11-21-optimizing-matrix-mul/snippets/: naive.tsx  party.tsx  tiling_1d_loop.tsx  tiling_2d.tsx  tiling_2d_simd.tsx  workgroup_256.tsx  workgroup_2d.tsx
blog/2024-11-25-optimizing-matmul/: index.md
blog/2024-11-25-optimizing-matmul/code/: Cargo.toml  README.md  rust-toolchain.toml
blog/2024-11-25-optimizing-matmul/code/benches/: Cargo.toml  gpu_bench.rs
blog/2024-11-25-optimizing-matmul/code/crates/cpu/compiled_for_gpu/isomorphic/: Cargo.toml  build.rs
blog/2024-11-25-optimizing-matmul/code/crates/cpu/compiled_for_gpu/isomorphic/src/: lib.rs
blog/2024-11-25-optimizing-matmul/code/crates/cpu/compiled_for_gpu/naive/: Cargo.toml  build.rs
blog/2024-11-25-optimizing-matmul/code/crates/cpu/compiled_for_gpu/tiling_1d/: Cargo.toml  build.rs
blog/2024-11-25-optimizing-matmul/code/crates/cpu/compiled_for_gpu/tiling_1d_loop/: Cargo.toml  build.rs
blog/2024-11-25-optimizing-matmul/code/crates/cpu/compiled_for_gpu/tiling_2d/: Cargo.toml
blog/2024-11-25-optimizing-matmul/code/crates/cpu/compiled_for_gpu/workgroup_256/: Cargo.toml  build.rs
blog/2024-11-25-optimizing-matmul/code/crates/cpu/compiled_for_gpu/workgroup_2d/: Cargo.toml  build.rs
blog/2024-11-25-optimizing-matmul/code/crates/cpu/matmul/src/: lib.rs  variants.rs
blog/2024-11-25-optimizing-matmul/code/crates/cpu/matmul/src/backends/: mod.rs  wgpu.rs
blog/2024-11-25-optimizing-matmul/code/crates/gpu/naive/: Cargo.toml
blog/2024-11-25-optimizing-matmul/code/crates/gpu/tiling_1d/: Cargo.toml
blog/2024-11-25-optimizing-matmul/code/crates/gpu/tiling_1d_loop/: Cargo.toml
blog/2024-11-25-optimizing-matmul/code/crates/gpu/tiling_2d/: Cargo.toml
blog/2024-11-25-optimizing-matmul/code/crates/gpu/tiling_2d/src/: lib.rs
blog/2024-11-25-optimizing-matmul/code/crates/gpu/workgroup_256/: Cargo.toml
blog/2024-11-25-optimizing-matmul/code/crates/gpu/workgroup_256/src/: lib.rs
blog/2024-11-25-optimizing-matmul/code/crates/gpu/workgroup_2d/: Cargo.toml
blog/2024-11-25-optimizing-matmul/code/crates/shared/isomorphic/: Cargo.toml
blog/2024-11-25-optimizing-matmul/code/crates/shared/settings/: Cargo.toml
blog/2024-11-25-optimizing-matmul/code/crates/shared/settings/src/: lib.rs
blog/2024-11-25-optimizing-matmul/snippets/: naive.tsx  party.tsx  tiling_1d.tsx  workgroup_256.tsx  workgroup_2d.tsx
blog/2025-05-07-nanite-at-home/: index.md
blog/src/components/UserMention/: index.tsx
blog/transition-announcement/: index.html
changelog/: index.html
content/: _index.md  changelog.md  ecosystem.md
content/blog/: 2024-08-12-transition-announcement.md  _index.md
ecosystem/: index.html
sass/: custom.scss
src/components/CodeCompare/: index.tsx
src/components/HomeLayout/: index.tsx
src/components/Snippet/: index.tsx
src/css/: custom.css
src/pages/: changelog.md  ecosystem.md  index.tsx
src/plugins/fetchAuthorImages/: index.ts
src/plugins/fetchChangelog/: index.ts
src/theme/: prism.ts
src/theme/BlogLayout/: index.tsx
src/theme/BlogListPage/: index.tsx
src/theme/Icon/ExternalLink/: index.tsx
templates/: _macros2.html  _variables.html  blog.html  changelog.html  index.html  page.html
(+23 files in other folders)
