[package]
name = "benches"
version = "0.1.0"
edition = "2021"

[dependencies]
matmul = { path = "../crates/cpu/matmul" }
criterion = { version = "0.5.1", features = ["html_reports"] }
rand = "0.8"
futures.workspace = true

[[bench]]
name = "gpu"
harness = false
path = "gpu_bench.rs"

[[bench]]
name = "isomorphic"
harness = false
path = "isomorphic_bench.rs"
